--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@
        color: whitesmoke
   }
   .calendar {
-    width: 80%;
+    width: 90%;
   }
   .calendar{
     overflow: auto;
@@ -341,7 +341,7 @@
   }
   .portfolio__worklist {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 40px;
     margin-top: 50px;
   }
@@ -594,6 +594,13 @@
     #nameSagar h1{font-size: 42px;}
     #nameSagar h2{font-size: 21px;}
     
+    .portfolio__worklist {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 40px;
+      margin-top: 50px;
+    }
+
     nav {
       padding-left: 20px;
       padding-right: 20px;
